--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest": "^27.4.4",
     "postcss": "^8.4.4",
     "ts-jest": "^27.1.1",
+    "typescript": "^4.8.2",
     "vue-jest": "^3.0.4"
   }
 }
