--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@expo/webpack-config": "^0.17.3",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
